--- a/styles/sass/partials/global/_typography.scss
+++ b/styles/sass/partials/global/_typography.scss
@@ -8,12 +8,58 @@
 
 //Roboto, Bold
 
+html {
+    font-size: 100%;
+}
 
+h1, h2, h3, h4 {
+    font-family: variables.$headingFont;
+    text-transform: uppercase;
+}
 
+h1 {
+    font-size: 79px;
+}
+
+h2 {
+    font-size: 45px;
+    line-height: 99.8px;
+}
+
+h3 {
+    letter-spacing: 1.3px;
+}
+
+h3, h4 {
+    line-height: 58px;
+}
+
+h4 {
+    letter-spacing: 0.8px;
+}
+
+p {
+    font-family: variables.$bodyFont;
+}
 
 ul,
 li {
     margin: 0;
     padding: 0;
     list-style: none;
+    font-family: variables.$bodyFont;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+    color: variables.$white;
+}
+
+button {
+    background-color: variables.$dandelion;
+    color: variables.$twilightBlue;
+    font-family: variables.$headingFont;
+    font-size: 25px;
+    line-height: 41.6px;
 }
