--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -2,4 +2,6 @@
 @use "./partials/global/mediaQueries";
 @use "./partials/global/variables";
 @use "./partials/global/typography";
-@use "./partials/global/base"
+@use "./partials/global/base";
+@use "./partials/home/header";
+@use "./partials/blog/headerBlog"
