--- a/styles/styles.css
+++ b/styles/styles.css
@@ -269,15 +269,95 @@ template {
   text-align: center;
 }
 
+html {
+  font-size: 100%;
+}
+
+h1, h2, h3, h4 {
+  font-family: "IM Fell English";
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 79px;
+}
+
+h2 {
+  font-size: 45px;
+  line-height: 99.8px;
+}
+
+h3 {
+  letter-spacing: 1.3px;
+}
+
+h3, h4 {
+  line-height: 58px;
+}
+
+h4 {
+  letter-spacing: 0.8px;
+}
+
+p {
+  font-family: "Roboto";
+}
+
 ul,
 li {
   margin: 0;
   padding: 0;
   list-style: none;
+  font-family: "Roboto";
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #FFFFFF;
+}
+
+button {
+  background-color: #FDD908;
+  color: #0D457F;
+  font-family: "IM Fell English";
+  font-size: 25px;
+  line-height: 41.6px;
 }
 
 .wrapper {
   max-width: 1260px;
   width: 90%;
   margin: 0 auto;
+}
+
+.headerHome {
+  background-image: url(../../../../Boat-Ride-Adventures-final-assets/home-header.jpg);
+  background-size: cover;
+  display: inline-block;
+}
+.headerHome h1 {
+  color: #FDD908;
+}
+.headerHome img {
+  position: relative;
+  left: 300px;
+  right: 0px;
+  top: 100px;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 20px 0px 0px 50px;
+}
+
+nav a {
+  display: inline-block;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 20px;
 }
