fixed up partials, fixed up HTML

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,7 +1,7 @@
-@use "./partials/global/setup";
-@use "./partials/global/mediaQueries";
-@use "./partials/global/variables";
-@use "./partials/global/typography";
-@use "./partials/global/base";
-@use "./partials/home/header";
-@use "./partials/blog/headerBlog"
+@use "./partials/base";
+@use "./partials/header";
+@use "./partials/main";
+@use "./partials/mediaQueries";
+@use "./partials/setup";
+@use "./partials/typography";
+@use "./partials/variables";
