--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -9,7 +9,7 @@
 //Roboto, Bold
 
 html {
-    font-size: 100%;
+    font-size: 125%;
 }
 
 h1, h2, h3, h4 {
@@ -18,11 +18,11 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-    font-size: 79px;
+    font-size: 5rem;
 }
 
 h2 {
-    font-size: 45px;
+    font-size: 3rem;
     line-height: 99.8px;
 }
 
@@ -60,6 +60,6 @@ button {
     background-color: variables.$dandelion;
     color: variables.$twilightBlue;
     font-family: variables.$headingFont;
-    font-size: 25px;
+    font-size: 2rem;
     line-height: 41.6px;
 }
