--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,39 @@
+.wrapper {
+  max-width: 1260px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.headerHome {
+  background-image: url(../Boat-Ride-Adventures-final-assets/home-header.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.headerHome h1 {
+  color: #FDD908;
+}
+.headerHome nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 50px;
+}
+.headerHome nav a {
+  display: inline-block;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 20px;
+}
+.headerHome a:hover {
+  border-bottom: #FDD908;
+}
+
+.vacation img {
+  width: 100%;
+}
+
 html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
@@ -270,7 +306,7 @@ template {
 }
 
 html {
-  font-size: 100%;
+  font-size: 125%;
 }
 
 h1, h2, h3, h4 {
@@ -279,11 +315,11 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 79px;
+  font-size: 5rem;
 }
 
 h2 {
-  font-size: 45px;
+  font-size: 3rem;
   line-height: 99.8px;
 }
 
@@ -321,43 +357,6 @@ button {
   background-color: #FDD908;
   color: #0D457F;
   font-family: "IM Fell English";
-  font-size: 25px;
+  font-size: 2rem;
   line-height: 41.6px;
-}
-
-.wrapper {
-  max-width: 1260px;
-  width: 90%;
-  margin: 0 auto;
-}
-
-.headerHome {
-  background-image: url(../../../../Boat-Ride-Adventures-final-assets/home-header.jpg);
-  background-size: cover;
-  display: inline-block;
-}
-.headerHome h1 {
-  color: #FDD908;
-}
-.headerHome img {
-  position: relative;
-  left: 300px;
-  right: 0px;
-  top: 100px;
-}
-
-nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 20px 0px 0px 50px;
-}
-
-nav a {
-  display: inline-block;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  padding: 20px;
 }
