--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@
   margin: 0 auto;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
 .headerHome {
   background-image: url(../Boat-Ride-Adventures-final-assets/home-header.jpg);
   background-repeat: no-repeat;
@@ -30,8 +35,89 @@
   border-bottom: #FDD908;
 }
 
+.headerImgContainer {
+  position: relative;
+  bottom: 100px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: auto;
+}
+
+.blogPosts {
+  background-color: #EAFEFC;
+}
+
+.blogGallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+h4 {
+  color: #0D457F;
+  margin: 0;
+}
+
+.vacation {
+  text-align: center;
+  background-color: #EAFEFC;
+}
+.vacation .textContainer {
+  padding: 50px;
+}
+
 .vacation img {
   width: 100%;
+}
+
+.contest {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #EAFEFC;
+  margin: 0;
+}
+.contest img {
+  margin: 40px 40px 40px 60px;
+  width: 65%;
+  -webkit-box-shadow: 0px 50px 50px 0px 0 #FDD908;
+          box-shadow: 0px 50px 50px 0px 0 #FDD908;
+}
+.contest .textContainer {
+  padding: 40px;
+  width: 50%;
+}
+
+.galleryHome {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #0D457F;
+  padding: 50px 0px 50px 50px;
+}
+
+.galleryHome li {
+  width: calc(33.3333333333% - 50px);
+  margin: 20px 10px;
+}
+
+button {
+  border: none;
+  padding: 5px 20px;
+}
+
+footer {
+  background-color: #FDD908;
+  text-align: center;
+}
+footer p {
+  margin: 0;
 }
 
 html {
@@ -44,12 +130,7 @@ body {
   margin: 0;
 }
 
-article,
-aside,
-footer,
-header,
-nav,
-section {
+article, aside, footer, header, nav, section {
   display: block;
 }
 
@@ -58,9 +139,7 @@ h1 {
   margin: 0.67em 0;
 }
 
-figcaption,
-figure,
-main {
+figcaption, figure, main {
   display: block;
 }
 
@@ -92,19 +171,15 @@ abbr[title] {
           text-decoration: underline dotted;
 }
 
-b,
-strong {
+b, strong {
   font-weight: inherit;
 }
 
-b,
-strong {
+b, strong {
   font-weight: bolder;
 }
 
-code,
-kbd,
-samp {
+code, kbd, samp {
   font-family: monospace, monospace;
   font-size: 1em;
 }
@@ -122,8 +197,7 @@ small {
   font-size: 80%;
 }
 
-sub,
-sup {
+sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -138,8 +212,7 @@ sup {
   top: -0.5em;
 }
 
-audio,
-video {
+audio, video {
   display: inline-block;
 }
 
@@ -156,46 +229,31 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-button,
-input,
-optgroup,
-select,
-textarea {
+button, input, optgroup, select, textarea {
   font-family: sans-serif;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
 }
 
-button,
-input {
+button, input {
   overflow: visible;
 }
 
-button,
-select {
+button, select {
   text-transform: none;
 }
 
-button,
-html [type=button],
-[type=reset],
-[type=submit] {
+button, html [type=button], [type=reset], [type=submit] {
   -webkit-appearance: button;
 }
 
-button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -222,15 +280,13 @@ textarea {
   overflow: auto;
 }
 
-[type=checkbox],
-[type=radio] {
+[type=checkbox], [type=radio] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 0;
 }
 
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type=number]::-webkit-inner-spin-button, [type=number]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -239,8 +295,7 @@ textarea {
   outline-offset: -2px;
 }
 
-[type=search]::-webkit-search-cancel-button,
-[type=search]::-webkit-search-decoration {
+[type=search]::-webkit-search-cancel-button, [type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -249,8 +304,7 @@ textarea {
   font: inherit;
 }
 
-details,
-menu {
+details, menu {
   display: block;
 }
 
@@ -306,7 +360,7 @@ template {
 }
 
 html {
-  font-size: 125%;
+  font-size: 100%;
 }
 
 h1, h2, h3, h4 {
@@ -315,11 +369,11 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 4rem;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   line-height: 99.8px;
 }
 
@@ -329,9 +383,10 @@ h3 {
 
 h3, h4 {
   line-height: 58px;
+  font-size: 1.5rem;
 }
 
-h4 {
+h5 {
   letter-spacing: 0.8px;
 }
 
@@ -357,6 +412,7 @@ button {
   background-color: #FDD908;
   color: #0D457F;
   font-family: "IM Fell English";
-  font-size: 2rem;
+  font-size: 1rem;
   line-height: 41.6px;
+  text-transform: uppercase;
 }
