--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,13 +17,15 @@ img {
 .headerHome h1 {
   color: #FDD908;
 }
-.headerHome nav ul {
+
+nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 50px;
+  padding: 30px 0px 0px 75px;
 }
-.headerHome nav a {
+
+nav a {
   display: inline-block;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -31,8 +33,30 @@ img {
           flex-direction: row;
   padding: 20px;
 }
-.headerHome a:hover {
-  border-bottom: #FDD908;
+
+a:hover {
+  border-bottom: solid #FDD908;
+}
+
+.headerContact {
+  background-image: url(../Boat-Ride-Adventures-final-assets/contact-header.jpg);
+  background-size: cover;
+}
+
+.headerContact h1 {
+  color: #FFFFFF;
+  padding: 20px 0px 200px 50px;
+  margin-left: 50px;
+  margin-bottom: 0px;
+}
+
+.headerBlog {
+  background-image: url(../Boat-Ride-Adventures-final-assets/blog-header.jpg);
+  background-size: cover;
+}
+.headerBlog h1 {
+  color: #FFFFFF;
+  padding: 50px;
 }
 
 .headerImgContainer {
@@ -118,6 +142,50 @@ footer {
 }
 footer p {
   margin: 0;
+}
+
+.contactMain {
+  background: #EAFEFC;
+  padding: 50px;
+}
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.contactInfo {
+  width: 30%;
+  line-height: 30px;
+}
+
+.contactForm {
+  width: 70%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  background-color: #0D457F;
+  color: #FFFFFF;
+  font-family: "Roboto";
+  -webkit-box-shadow: 0px 30px 30px 0px solid #FDD908;
+          box-shadow: 0px 30px 30px 0px solid #FDD908;
+}
+.contactForm .message {
+  border: solid 1px #FDD908;
+  background-color: #0D457F;
+  color: #FFFFFF;
+}
+
+.icons {
+  color: #0D457F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 html {
