--- a/styles/sass/partials/_base.scss
+++ b/styles/sass/partials/_base.scss
@@ -2,11 +2,11 @@
 
 .wrapper {
     max-width: 1260px;
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
 img {
     max-width: 100%;
-    display: block;
+    //display: block;
 }
