--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -9,12 +9,14 @@
 
     h1 {
         color: variables.$dandelion;
+        padding: 170px 50px 20px 50px;
+        margin-bottom: 0;
     }
 }
 
 nav ul {
     display: flex;
-    padding: 30px 0px 0px 75px;
+    padding: 20px 0px 0px 75px;
 }
 
 nav a {
