--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -22,8 +22,9 @@ h1 {
 }
 
 h2 {
-    font-size: 2rem;
-    line-height: 99.8px;
+    font-size: 1.5em;
+    //line-height: 99.8px;
+    font-weight: 400;
 }
 
 h3 {
@@ -33,6 +34,7 @@ h3 {
 h3, h4 {
     line-height: 58px;
     font-size: 1.5rem;
+    font-weight: 400;
 }
 
 h5 {
@@ -41,6 +43,10 @@ h5 {
 
 p {
     font-family: variables.$bodyFont;
+    font-size: 0.7rem;
+    line-height: 28px;
+    letter-spacing: 1px;
+    font-weight: 400;
 }
 
 ul,
