--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,11 @@
 .wrapper {
   max-width: 1260px;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
 }
 
 img {
   max-width: 100%;
-  display: block;
 }
 
 .headerHome {
@@ -16,13 +15,15 @@ img {
 }
 .headerHome h1 {
   color: #FDD908;
+  padding: 170px 50px 20px 50px;
+  margin-bottom: 0;
 }
 
 nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 30px 0px 0px 75px;
+  padding: 20px 0px 0px 75px;
 }
 
 nav a {
@@ -60,12 +61,13 @@ a:hover {
 }
 
 .headerImgContainer {
-  position: relative;
-  bottom: 100px;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: auto;
+  position: absolute;
+  top: 150px;
+  right: 0px;
+  width: 625px;
+}
+h2 {
+  color: #0D457F;
 }
 
 .blogPosts {
@@ -81,11 +83,79 @@ a:hover {
           justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  text-align: center;
+  width: 100%;
+}
+.blogGallery li {
+  width: 40%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.blogGallery h2 {
+  margin: 0;
+  padding: 0;
+}
+.blogGallery p {
+  margin: 0;
+  padding: 0 0 50px 0;
+}
+
+.blogOne, .blogTwo {
+  padding: 200px 0px 20px 0px;
+}
+
+.blogThree .blogFour {
+  padding: 50px;
+}
+
+.fa-solid {
+  background-color: #FDD908;
+  color: #0D457F;
+}
+
+.programs, .locations {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #0D457F;
+}
+.programs p, .locations p {
+  color: #FFFFFF;
+}
+
+.programsTextContainer, .locationsTextContainer {
+  width: 60%;
+  text-align: center;
+}
+
+.programsImgContainer, .locationsImgContainer {
+  width: 40%;
+}
+
+.programsImgContainer {
+  position: relative;
+  top: -10;
+}
+
+h3 {
+  color: #FFFFFF;
 }
 
 h4 {
   color: #0D457F;
   margin: 0;
+  font-weight: 400;
 }
 
 .vacation {
@@ -127,13 +197,13 @@ h4 {
 }
 
 .galleryHome li {
-  width: calc(33.3333333333% - 50px);
+  width: calc(33.3333333333% - 60px);
   margin: 20px 10px;
 }
 
 button {
   border: none;
-  padding: 5px 20px;
+  padding: 0px 10px;
 }
 
 footer {
@@ -174,14 +244,23 @@ footer p {
   font-family: "Roboto";
   -webkit-box-shadow: 0px 30px 30px 0px solid #FDD908;
           box-shadow: 0px 30px 30px 0px solid #FDD908;
+  text-align: center;
+}
+.contactForm .name, .contactForm .email {
+  border-bottom: solid 1px #FDD908;
+  background-color: #0D457F;
+  color: #FFFFFF;
 }
 .contactForm .message {
   border: solid 1px #FDD908;
   background-color: #0D457F;
   color: #FFFFFF;
 }
+.contactForm textarea {
+  margin: 50px;
+}
 
-.icons {
+.iconsContact {
   color: #0D457F;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -441,8 +520,8 @@ h1 {
 }
 
 h2 {
-  font-size: 2rem;
-  line-height: 99.8px;
+  font-size: 1.5em;
+  font-weight: 400;
 }
 
 h3 {
@@ -452,6 +531,7 @@ h3 {
 h3, h4 {
   line-height: 58px;
   font-size: 1.5rem;
+  font-weight: 400;
 }
 
 h5 {
@@ -460,6 +540,10 @@ h5 {
 
 p {
   font-family: "Roboto";
+  font-size: 0.7rem;
+  line-height: 28px;
+  letter-spacing: 1px;
+  font-weight: 400;
 }
 
 ul,
