--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -77,9 +77,23 @@ h2 {
     }
 }
 
+.programs img {
+    box-shadow: 10px 10px 0 variables.$dandelion;
+    position: relative;
+    top: -30px;
+}
+
 .programsTextContainer, .locationsTextContainer {
     width: 60%;
-    text-align: center;
+
+}
+
+.programsTextContainer, .locationsTextContainer {
+    padding: 0px 60px;
+}
+
+.locationsTextContainer {
+    text-align: right;
 }
 
 .programsImgContainer, .locationsImgContainer {
@@ -90,6 +104,13 @@ h2 {
     position: relative;
     top: -10;
 }
+
+.locationsImg {
+    box-shadow: -10px 10px 0 variables.$dandelion;
+    position: relative;
+    bottom: -20;
+}
+
 
 // .info {
 //     background-color: variables.$twilightBlue;
@@ -146,7 +167,11 @@ h4 {
     background-color: variables.$iceBlue;
 
     .textContainer {
-        padding: 50px;
+        padding: 100px;
+        
+        p {
+            padding: 0 50px 20px 50px;
+        }
     }
 }
 
@@ -214,12 +239,12 @@ footer {
 
 .contactForm {
     width: 70%;
-    justify-content: flex-end;
+    //justify-content: flex-end;
     background-color: variables.$twilightBlue;
     color: variables.$white;
     font-family: variables.$bodyFont;
-    box-shadow: 0px 30px 30px 0px solid variables.$dandelion;
-    text-align: center;
+    //box-shadow: 0px 30px 30px 0px solid variables.$dandelion;
+    //text-align: center;
 
     .name, .email {
         border-bottom: solid 1px variables.$dandelion;
@@ -239,10 +264,129 @@ footer {
 }
 
 input[type=text] {
-    
+
 }
 
 .iconsContact {
     color: variables.$twilightBlue;
     display: flex;
+}
+
+
+// BLOG STYLING
+
+.mainBlog {
+    background-color: variables.$iceBlue;
+}
+
+.aboutBlog {
+    display: flex;
+}
+
+.mission {
+
+    img {
+        width: 60%;
+        margin-top: 60px;
+        box-shadow: 10px 10px 0 variables.$twilightBlue;
+    }
+}
+
+.missionTextContainer {
+    background-color: variables.$twilightBlue;
+    width: 60%;
+    padding: 20px;
+    margin-left: 10px;
+
+    h3 {
+        color: variables.$dandelion;
+        font-weight: 400;
+        font-size: 1rem;
+        margin: 0;
+    }
+
+    p {
+        color: variables.$white;
+    }
+
+    li {
+        color: variables.$white;
+        list-style-type: disc;
+        font-weight: 400;
+        font-size: 0.8rem;
+        line-height: 25px;
+        margin: 0px 10px;
+    }
+}
+
+aside {
+    flex-direction: column;
+    
+    img {
+        position: absolute;
+        top: 300px;
+        right: 0;
+        width: 55%;
+        box-shadow: -10px 10px 0 variables.$dandelion;
+    }
+}
+
+.articleTextContainer {
+    border: solid 3px variables.$dandelion;
+    border-top: none;
+    border-right: none;
+    margin: 300px 0px 0px 230px;
+    padding: 80px;
+    //padding: 100px;
+    //position: absolute;
+
+
+    p {
+        font-size: 0.7rem;
+    }
+
+}
+
+.comments {
+    display: flex;
+    flex-direction: column;
+    margin: 0 50px 50px 600px;
+
+    h5 {
+        color: variables.$twilightBlue;
+        font-size: 1.5rem;
+        font-weight: 400;
+    }
+
+    .commentsDate {
+        color: variables.$twilightBlue;
+        font-weight: 900;
+    }
+}
+
+.blogForm {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 40%;
+    margin-left: 600px;
+    padding-bottom: 50px;
+    
+
+    .name, .email {
+        border: none;
+        border-bottom: solid 1px variables.$dandelion;
+        background-color: variables.$iceBlue;
+        padding: 20px 0px;
+    }
+
+    textarea {
+        background-color: variables.$iceBlue;
+        border: solid 1px variables.$dandelion;
+    }
+
+    .blogButton {
+        background-color: variables.$twilightBlue;
+        color: variables.$dandelion;
+    }
 }
