--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -12,7 +12,7 @@ html {
     font-size: 100%;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
     font-family: variables.$headingFont;
     text-transform: uppercase;
 }
