--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,1 +1,15 @@
 @use "./variables";
+
+// DESKTOP
+
+@media (max-width: 940px) {}
+
+
+// TABLET
+
+@media (max-width: 768px) {}
+
+
+// MOBILE
+
+@media (max-width: 480px) {}
