--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -2,7 +2,23 @@
 
 // DESKTOP
 
-@media (max-width: 940px) {}
+@media (max-width: 1100px) {
+	
+	.homeMain {
+		img {
+			position: absolute;
+			top: 200;
+
+		}
+		
+	}
+}
+
+//blog styling
+
+
+        //locations/programs
+
 
 
 // TABLET
