--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,15 @@ a:focus {
   border-bottom: solid #FDD908;
 }
 
+.fa-bars {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  font-size: 3rem;
+  visibility: hidden;
+  color: #FFFFFF;
+}
+
 .headerContact {
   background-image: url(../Boat-Ride-Adventures-final-assets/contact-header.jpg);
   background-size: cover;
@@ -337,7 +346,7 @@ footer p {
 }
 
 .mission img {
-  width: 60%;
+  width: 80%;
   margin-top: 60px;
   -webkit-box-shadow: 10px 10px 0 #0D457F;
           box-shadow: 10px 10px 0 #0D457F;
@@ -345,7 +354,7 @@ footer p {
 
 .missionTextContainer {
   background-color: #0D457F;
-  width: 60%;
+  width: 80%;
   padding: 20px;
   margin-left: 10px;
 }
@@ -441,10 +450,16 @@ aside img {
   color: #FDD908;
 }
 
-@media (max-width: 1100px) {
-  .homeMain img {
-    position: absolute;
-    top: 200;
+@media (max-width: 480px) {
+  h1 {
+    margin-top: 0;
+    padding-top: 0;
+  }
+  i.fa-bars {
+    visibility: visible;
+  }
+  .mainMenu {
+    display: none;
   }
 }
 html {
