--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,6 +295,7 @@ footer p {
   color: #FFFFFF;
   padding: 20px 0px 0px 20px;
   margin: 20px 20px 20px 50px;
+  resize: none;
 }
 .contactForm textarea::-webkit-input-placeholder {
   color: #FFFFFF;
@@ -440,16 +441,61 @@ aside img {
   border-bottom: solid 1px #FDD908;
   background-color: #EAFEFC;
   padding: 20px 0px;
+  width: 50%;
 }
 .blogForm textarea {
   background-color: #EAFEFC;
   border: solid 1px #FDD908;
+  resize: none;
 }
 .blogForm .blogButton {
   background-color: #0D457F;
   color: #FDD908;
+  margin-top: 20px;
 }
 
+@media (max-width: 1085px) {
+  .headerImgContainer {
+    margin: 350px 200px 0px 0px;
+  }
+  .blogPosts {
+    padding-top: 400px;
+  }
+}
+@media (max-width: 768px) {
+  .headerImgContainer {
+    display: none;
+  }
+  .blogPosts {
+    padding: 0;
+  }
+  .contest {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .programs,
+.locations {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 @media (max-width: 480px) {
   h1 {
     margin-top: 0;
@@ -458,8 +504,17 @@ aside img {
   i.fa-bars {
     visibility: visible;
   }
+  .programsTextContainer, .locationsTextContainer {
+    padding: 0;
+  }
   .mainMenu {
     display: none;
+  }
+  .galleryHome {
+    -webkit-box-flex: 50%;
+        -ms-flex: 50%;
+            flex: 50%;
+    max-width: 50%;
   }
 }
 html {
