--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,8 +131,6 @@ h2 {
   color: #0D457F;
   padding: 10px;
   border-radius: 25px;
-  position: absolute;
-  left: 50;
 }
 
 .programs, .locations {
@@ -217,8 +215,8 @@ h4 {
 .contest img {
   margin: 40px 40px 40px 60px;
   width: 65%;
-  -webkit-box-shadow: 0px 50px 50px 0px 0 #FDD908;
-          box-shadow: 0px 50px 50px 0px 0 #FDD908;
+  -webkit-box-shadow: -10px 10px 0 #FDD908;
+          box-shadow: -10px 10px 0 #FDD908;
 }
 .contest .textContainer {
   padding: 40px;
@@ -268,34 +266,42 @@ footer p {
 
 .contactInfo {
   width: 30%;
-  margin: 20px 0px 0px 20px;
+  margin: 0px 0px 175px 50px;
+}
+.contactInfo .infoEmail {
+  margin: 0 0 30px 0;
+}
+.contactInfo p {
+  line-height: 20px;
+  margin-top: 20px;
 }
 
 .contactForm {
-  width: 50%;
-  padding-right: 20px;
-  margin-bottom: 50px;
+  width: 60%;
   background-color: #0D457F;
   color: #FFFFFF;
   font-family: "Roboto";
   -webkit-box-shadow: 15px 15px 0 #FDD908;
           box-shadow: 15px 15px 0 #FDD908;
+  position: absolute;
+  top: 300px;
+  right: 15px;
 }
 .contactForm input {
   background-color: #0D457F;
   color: #FFFFFF;
-  margin: 50px 20px 20px 50px;
+  margin: 50px 20px 20px 80px;
   border-style: none;
   border-bottom: solid 1px #FDD908;
-  padding: 10px;
+  padding: 0px 10px 10px 50px;
 }
 .contactForm textarea {
   border: solid 1px #FDD908;
   background-color: #0D457F;
   color: #FFFFFF;
-  padding: 20px 0px 0px 20px;
-  margin: 20px 20px 20px 50px;
+  margin: 50px 20px 20px 80px;
   resize: none;
+  padding: 20px 0px 0px 20px;
 }
 .contactForm textarea::-webkit-input-placeholder {
   color: #FFFFFF;
@@ -318,8 +324,8 @@ footer p {
   line-height: 1.2rem;
 }
 .contactForm button {
-  margin: 30px;
-  padding: 0px 205px;
+  margin: 20px 20px 20px 80px;
+  padding: 0px 240px;
 }
 
 .iconsContact {
@@ -327,7 +333,7 @@ footer p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 100px 20px 20px 20px;
+  padding: 100px 20px 0px 50px;
 }
 .iconsContact .fa-instagram {
   padding: 0 15px;
@@ -347,7 +353,7 @@ footer p {
 }
 
 .mission img {
-  width: 80%;
+  width: 30%;
   margin-top: 60px;
   -webkit-box-shadow: 10px 10px 0 #0D457F;
           box-shadow: 10px 10px 0 #0D457F;
@@ -355,7 +361,7 @@ footer p {
 
 .missionTextContainer {
   background-color: #0D457F;
-  width: 80%;
+  width: 30%;
   padding: 20px;
   margin-left: 10px;
 }
@@ -382,22 +388,24 @@ aside {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-}
-aside img {
+  width: 50%;
   position: absolute;
   top: 300px;
   right: 0;
-  width: 55%;
+}
+
+.articleImgContainer img {
+  width: 100%;
   -webkit-box-shadow: -10px 10px 0 #FDD908;
           box-shadow: -10px 10px 0 #FDD908;
 }
 
 .articleTextContainer {
+  padding: 100px;
   border: solid 3px #FDD908;
   border-top: none;
   border-right: none;
-  margin: 300px 0px 0px 230px;
-  padding: 80px;
+  margin-left: -10px;
 }
 .articleTextContainer p {
   font-size: 0.7rem;
@@ -411,7 +419,7 @@ aside img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 0 50px 50px 600px;
+  margin: 300px 50px 50px 700px;
 }
 .comments h5 {
   color: #0D457F;
@@ -433,25 +441,33 @@ aside img {
           flex-direction: column;
   text-align: center;
   width: 40%;
-  margin-left: 600px;
+  margin-left: 700px;
   padding-bottom: 50px;
 }
 .blogForm .name, .blogForm .email {
-  border: none;
-  border-bottom: solid 1px #FDD908;
   background-color: #EAFEFC;
-  padding: 20px 0px;
+  border: none;
   width: 50%;
+  padding: 20px;
 }
 .blogForm textarea {
   background-color: #EAFEFC;
-  border: solid 1px #FDD908;
+  border: solid 2px #FDD908;
   resize: none;
+  padding: 20px 0px 0px 20px;
 }
 .blogForm .blogButton {
   background-color: #0D457F;
   color: #FDD908;
   margin-top: 20px;
+}
+
+.nameEmail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: solid 2px #FDD908;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 1085px) {
