--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -7,8 +7,6 @@
     top: 150px;
     right: 0px;
     width: 625px;
-
-
 }
 
 h2 {
@@ -29,8 +27,6 @@ h2 {
     padding: 200px 50px 100px;
 
     li {
-        //padding: 45px;
-        //margin: 50px 25px 25px;
         width: 40%;
         display: flex;
         flex-direction: column;
@@ -38,9 +34,9 @@ h2 {
     }
 
     h2 {
-        margin: 0;
-        padding: 10px;
+        padding: 0px;
         font-weight: 400;
+        margin: 0;
     }
 
     p {
@@ -48,17 +44,17 @@ h2 {
     }
 }
 
-
-
-.blogThree .blogFour {
-    padding: 50px;
+.blogIcons {
+    display: flex;
+    padding: 20px;
 }
+
 
 .fa-solid {
     background-color: variables.$dandelion;
     color: variables.$twilightBlue;
     padding: 10px;
-    border-radius: 25px;
+    border-radius: 20px;
 }
 
 .programs, .locations {
@@ -308,7 +304,7 @@ footer {
 
 aside {
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     position: absolute;
     top: 300px;
     right: 0;
@@ -339,7 +335,25 @@ aside {
 .comments {
     display: flex;
     flex-direction: column;
-    margin: 300px 50px 50px 700px;
+    margin: 300px 50px 50px 600px;
+
+    .man, .woman {
+        display: flex;
+    }
+    
+    .man {
+        margin-bottom: 50px;
+    }
+
+    .manImgContainer, .womanImgContainer {
+        flex-direction: row;
+        width: 30%;
+    }
+
+    .manTextContainer, .womanTextContainer {
+        flex-direction: column;
+        width: 70%;
+    }
 
     h5 {
         color: variables.$twilightBlue;
@@ -350,6 +364,7 @@ aside {
     .commentsDate {
         color: variables.$twilightBlue;
         font-weight: 900;
+        margin: 0px;
     }
 }
 
@@ -358,7 +373,7 @@ aside {
     flex-direction: column;
     text-align: center;
     width: 40%;
-    margin-left: 700px;
+    margin-left: 600px;
     padding-bottom: 50px;
     
 
